--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div class="container">
     <h2>Daily Work Hours Calculator</h2>
     <form id="workHoursForm">
-        <label for="balanceDays">Balance Working Days (max 31):</label>
+        <label for="balanceDays">Balance Working Days:</label>
         <input type="number" id="balanceDays"  required>
         <div id="balanceDaysError" class="error"></div>
 
@@ -112,7 +112,7 @@
         <input type="number" id="currentHours"  required>
         <div id="currentHoursError" class="error"></div>
 
-        <label for="currentMinutes">Current Total Worked Minutes (max 59):</label>
+        <label for="currentMinutes">Current Total Worked Minutes:</label>
         <input type="number" id="currentMinutes"  required>
         <div id="currentMinutesError" class="error"></div>
 
